# timeseries

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: error.rs  main.rs  time.rs
