[package]
name = "timeseries-cli"
version = "0.5.1"
edition = "2021"
description = "Generate a series of timestamps between two bounds."
repository = "https://github.com/bww/timeseries"
readme = "README.md"
license = "BSD-3-Clause"

[[bin]]
name = "timeseries"
path = "src/main.rs"

[dependencies]
chrono = "0.4"
structopt = "0.3"
nom = "7.1"
